[package]
name = "pacer"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/beebeeep/pacer"
license = "MIT"
keywords = ["http", "rate-limiter"]

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
config = "0.15.11"
env_logger = { version = "0.11.8", features = ["kv"] }
flexbuffers = "25.2.10"
futures-lite = "2.6.0"
glommio = "0.9.0"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1", "server"] }
log = { version = "0.4.27", features = ["kv"] }
serde = { version = "1.0.219", features = ["derive"] }
snafu = "0.8.6"

[[example]]
name = "bench"

[dev-dependencies]
atomic-counter = "1.0.1"
hdrhistogram = "7.5.4"
